added social media details

--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
             <div class="footer-widget">
               <div class="footer-social-icon">
                 <span>Follow us</span>
-                <a href="#"><i class="fab fa-facebook-f social-icon"></i></a>
-                <a href="#"><i class="fab fa-twitter social-icon"></i></a>
-                <a href=""><i class="fab fa-instagram social-icon"></i></a>
-                <a href=""><i class="fab fa-youtube social-icon"></i></a>
+                <a href="https://www.facebook.com/meenaketanpadhy2002"><i class="fab fa-facebook-f social-icon"></i></a>
+                <a href="https://twitter.com/MeenaketanPadhy"><i class="fab fa-twitter social-icon"></i></a>
+                <a href="https://instagram.com/the_noobe_show_?utm_medium=copy_link"><i class="fab fa-instagram social-icon"></i></a>
+                <a href="https://www.youtube.com/channel/UCBqk86UVznzQQ_X7Q5kwkRQ" ><i class="fab fa-youtube social-icon"></i></a>
               </div>
             </div>
           </div>
