--- a/index.html
+++ b/index.html
@@ -122,36 +122,34 @@
     </div>
   </div>
   <!-- paralax 5 -->
-  <div class="paralx-div" id="aboutme">
+  <div class="paralx-div pb-3" id="aboutme">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
         <h3 class="hero-header">ABOUT ME</h3>
       </div>
       <p class="hero-sub">
-        I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages , now I am going to learn about video color grading with my friend and so much more!
+        I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages .
       </p>
-      <button class="btn-round-solid">
+      <button class="btn-round-solid ">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
     </div>
   </div>
+  
   <!--  paralx 5 end -->
   <!-- footer start -->
-  <footer class="footer-section">
+  <footer class="footer-section pt-3">
     <div class="container">
       <div class="footer-content pt-5 pb-5">
         <div class="row">
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-widget">
               <div class="footer-logo">
-                <h3 class="logo text-light">THE_NOOB_SHOW</h3>
+                <h3 class="logo text-light" style="text-transform: capitalize;">rawsome_photography</h3>
               </div>
               <div class="footer-text">
-                <p>
-                  Lorem ipsum dolor sit amet, consec tetur adipisicing elit,
-                  sed do eiusmod tempor incididuntut consec tetur adipisicing
-                  elit,Lorem ipsum dolor sit amet.
-                </p>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="/img/sabya.png" width="250px" height="150px" alt="" srcset=""></a>
+                
               </div>
             </div>
           </div>
