--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -20,7 +20,7 @@
         <div id="preloader">
             <div id="status">&nbsp;</div>
         </div>
-        <div class="paralx-div" id="parallax">
+        <div class="paralx-div" id="parallax" style="height: 220px;">
             <!-- header start -->
             <header class="header">
               <!-- Navbar start -->
@@ -49,19 +49,37 @@
             <!-- header end -->
             <!-- paralax 1 start -->
             <div class="hero container-fluid">
-              <div class="pb-4 mt-5">
-                <h3 class="hero-header">ABOUT ME</h3>
+              <div class="pb-4">
+                <h3 class="hero-header" style="font-size: 30px;">ABOUT ME</h3>
               </div>
-              <p class="hero-sub text-center">
+              <p class="hero-sub text-center" style="font-size: 10px;">
                 Who the hack am I , what are my goal in life and why do i make the stuff I make.
               </p>
+            </div>
             </div>
             <!--  paralax1 end -->
           </div>
         <!-- END PRELOADER -->
-        <div class="container">
+        <div class="container pt-5 pb-5">
+            <div class="row"> 
+                <div class="col-md-6 col-12">
+                    <div class="img-circle text-center">
+                        <img id="aboutmeimg" src="/img/aboutme.jpg" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="col-md-6 col-12">
+                    <div class="aboutme">
+                        <p class="stline">My name is Meenaketan Padhy and I'am 20 year old. I live in India, Odisha and I self taught Graphic designer here. Before this , I have always been creating , but not photo editing. I made video's, still intrested vfx which is my childhood dream.</p>
+                        <p class="stline">I am always trying learn as much as possible in this field. However I didn't know Photoshop. Or.... well I knew it , I just did not know about it much. However , three year ago my friend introduced me about Photoshop and all this cool stuff . After 2 day doing random stuff , I absolutely fell in love with it. Recently I start to learn 3d in blender because of corridor crew and their crazy video, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.</p>
+                        <p class="stline">What I do:  I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages , now I am going to learn about video color grading with my friend and so much more!</p>
+                    </div>
+                </div>
+            </div>
+            
             
         </div>
+        <!-- <p>I am always trying learn as much as possible in this field. However I didn't know Photoshop. Or.... well I knew it , I just did not know about it much. However , three year ago my friend introduced me about Photoshop and all this cool stuff . After 2 day doing random stuff , I absolutely fell in love with it. Recently I start to learn 3d in blender because of corridor crew and their crazy video, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.</p> -->
+        <!-- <p>What I do:  I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages , now I am going to learn about video color grading with my friend and so much more!</p> -->
        <!-- footer start -->
   <footer class="footer-section">
     <div class="container">
