--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a class="brand" href="#">
           <!-- img for navbar brand -->
           <!-- <img src="" alt="" srcset="" /> -->
-          THE_NOOBE_SHOW
+          THE NOOBE SHOW
         </a>
         <input type="checkbox" id="nav" class="hidden" />
         <label for="nav" class="nav-toggle">
@@ -131,7 +131,7 @@
         I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages .
       </p>
       <button class="btn-round-solid ">
-        <ion-icon name="play"></ion-icon> Play Now
+        <ion-icon name="play"></ion-icon> Click here
       </button>
     </div>
   </div>
