--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -48,12 +48,12 @@
             </header>
             <!-- header end -->
             <!-- paralax 1 start -->
-            <div class="hero container-fluid">
-              <div class="pb-4">
-                <h3 class="hero-header" style="font-size: 30px;">ABOUT ME</h3>
+            <div class="hero container">
+              <div >
+                <h3 class="hero-header">ABOUT ME</h3>
               </div>
-              <p class="hero-sub text-center" style="font-size: 10px;">
-                Who the hack am I , what are my goal in life and why do i make the stuff I make.
+              <p class="hero-sub">
+                Who the hack am I , what are my goal in life  and why do i make  the stuff I make.
               </p>
             </div>
             </div>
@@ -64,7 +64,7 @@
             <div class="row"> 
                 <div class="col-md-6 col-12">
                     <div class="img-circle text-center">
-                        <img id="aboutmeimg" src="/img/aboutme.jpg" alt="" srcset="">
+                        <img id="aboutmeimg" src="/img/Untitled-1.png" alt="" srcset="">
                     </div>
                 </div>
                 <div class="col-md-6 col-12">
