--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <p class="hero-sub">
         I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages .
       </p>
-      <button class="btn-round-solid ">
+      <button class="btn-round-solid " onclick="window.location.href='pages/aboutme.html'">
         <ion-icon name="play"></ion-icon> Click here
       </button>
     </div>
@@ -148,7 +148,7 @@
                 <h3 class="logo text-light" style="text-transform: capitalize;">rawsome_photography</h3>
               </div>
               <div class="footer-text">
-                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="/img/sabya.png" width="250px" height="150px" alt="" srcset=""></a>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/sabya.png" width="250px" height="150px" alt="" srcset=""></a>
                 
               </div>
             </div>
