--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -64,7 +64,7 @@
             <div class="row"> 
                 <div class="col-md-6 col-12">
                     <div class="img-circle text-center">
-                        <img id="aboutmeimg" src="/img/Untitled-1.png" alt="" srcset="">
+                        <img id="aboutmeimg" src="img/Untitled-1.png" alt="" srcset="">
                     </div>
                 </div>
                 <div class="col-md-6 col-12">
