--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -62,17 +62,22 @@
         <!-- END PRELOADER -->
         <div class="container pt-5 pb-5">
             <div class="row"> 
-                <div class="col-md-6 col-12">
+                <div class="col-md-12 col-12">
                     <div class="img-circle text-center">
                         <img id="aboutmeimg" src="../img/Untitled-1.png" alt="" srcset="">
                     </div>
                 </div>
-                <div class="col-md-6 col-12">
+                <div class="col-md-12 col-12">
+                    <div class="text-center text-light">WHO AM I ?</div>
                     <div class="aboutme">
+                        <h3 class="text-center">The beginning</h3>
                         <p class="stline">My name is Meenaketan Padhy and I'am 20 year old. I live in India, Odisha and I self taught Graphic designer here. Before this , I have always been creating , but not photo editing. I made video's, still intrested vfx which is my childhood dream.</p>
                         <p class="stline">I am always trying learn as much as possible in this field. However I didn't know Photoshop. Or.... well I knew it , I just did not know about it much. However , three year ago my friend introduced me about Photoshop and all this cool stuff . After 2 day doing random stuff , I absolutely fell in love with it. Recently I start to learn 3d in blender because of corridor crew and their crazy video, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.</p>
-                        <p class="stline">What I do:  I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages , now I am going to learn about video color grading with my friend and so much more!</p>
-                        <p class="stline">My goal: I have always been interested in magic and science fiction . I try to reflect the idea of everything being possible .What I love more than anything is the reaction of those I show how it was done . We never outgrow our child like ability to be amazed. All i want to make creative stuff which makes me happy and trying to earn through this process.</p>
+                        <h3 class="text-center">What I do</h3>
+                        <p class="stline">  I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages , now I am going to learn about video color grading with my friend and so much more!</p>
+                        <h3 class="text-center">My goal</h3>
+                        <p class="stline"> I have always been interested in magic and science fiction . I try to reflect the idea of everything being possible .What I love more than anything is the reaction of those I show how it was done . We never outgrow our child like ability to be amazed. All i want to make creative stuff which makes me happy and trying to earn through this process.</p>
+                    
                     </div>
                 </div>
             </div>
