--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -25,7 +25,7 @@
             <header class="header">
               <!-- Navbar start -->
               <nav class="navbar">
-                <a class="brand" href="#">
+                <a class="brand" href="../index.html">
                   <!-- img for navbar brand -->
                   <!-- <img src="" alt="" srcset="" /> -->
                   THE_NOOBE_SHOW
@@ -70,12 +70,12 @@
                 <div class="col-md-12 col-12">
                     <div class="text-center text-light">WHO AM I ?</div>
                     <div class="aboutme">
-                        <h3 class="text-center">The beginning</h3>
+                        <h3 class="text-center text-light">The beginning</h3>
                         <p class="stline">My name is Meenaketan Padhy and I'am 20 year old. I live in India, Odisha and I self taught Graphic designer here. Before this , I have always been creating , but not photo editing. I made video's, still intrested vfx which is my childhood dream.</p>
                         <p class="stline">I am always trying learn as much as possible in this field. However I didn't know Photoshop. Or.... well I knew it , I just did not know about it much. However , three year ago my friend introduced me about Photoshop and all this cool stuff . After 2 day doing random stuff , I absolutely fell in love with it. Recently I start to learn 3d in blender because of corridor crew and their crazy video, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.</p>
-                        <h3 class="text-center">What I do</h3>
+                        <h3 class="text-center text-light">What I do</h3>
                         <p class="stline">  I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages , now I am going to learn about video color grading with my friend and so much more!</p>
-                        <h3 class="text-center">My goal</h3>
+                        <h3 class="text-center text-light">My goal</h3>
                         <p class="stline"> I have always been interested in magic and science fiction . I try to reflect the idea of everything being possible .What I love more than anything is the reaction of those I show how it was done . We never outgrow our child like ability to be amazed. All i want to make creative stuff which makes me happy and trying to earn through this process.</p>
                     
                     </div>
@@ -87,75 +87,72 @@
         <!-- <p>I am always trying learn as much as possible in this field. However I didn't know Photoshop. Or.... well I knew it , I just did not know about it much. However , three year ago my friend introduced me about Photoshop and all this cool stuff . After 2 day doing random stuff , I absolutely fell in love with it. Recently I start to learn 3d in blender because of corridor crew and their crazy video, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.</p> -->
         <!-- <p>What I do:  I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages , now I am going to learn about video color grading with my friend and so much more!</p> -->
        <!-- footer start -->
-  <footer class="footer-section">
-    <div class="container">
-      <div class="footer-content pt-5 pb-5">
-        <div class="row">
-          <div class="col-xl-4 col-lg-4 mb-50">
-            <div class="footer-widget">
-              <div class="footer-logo">
-                <h3 class="logo text-light">THE_NOOB_SHOW</h3>
+       <footer class="footer-section pt-3">
+        <div class="container">
+          <div class="footer-content pt-5 pb-5">
+            <div class="row">
+              <div class="col-xl-4 col-lg-4 mb-50">
+                <div class="footer-widget">
+                  <div class="footer-logo">
+                    <h3 class="logo text-light" style="text-transform: capitalize;">rawsome_photography</h3>
+                  </div>
+                  <div class="footer-text">
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><img src="../img/sabya.png" width="250px" height="150px" alt="" srcset=""></a>
+                    
+                  </div>
+                </div>
               </div>
-              <div class="footer-text">
-                <p>
-                  Lorem ipsum dolor sit amet, consec tetur adipisicing elit,
-                  sed do eiusmod tempor incididuntut consec tetur adipisicing
-                  elit,Lorem ipsum dolor sit amet.
-                </p>
+              <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+                <div class="footer-widget">
+                  <div class="footer-social-icon">
+                    <span>Follow us</span>
+                    <a href="https://www.facebook.com/meenaketanpadhy2002"><i class="fab fa-facebook-f social-icon"></i></a>
+                    <a href="https://twitter.com/MeenaketanPadhy"><i class="fab fa-twitter social-icon"></i></a>
+                    <a href="https://instagram.com/the_noobe_show_?utm_medium=copy_link"><i class="fab fa-instagram social-icon"></i></a>
+                    <a href="https://www.youtube.com/channel/UCBqk86UVznzQQ_X7Q5kwkRQ" ><i class="fab fa-youtube social-icon"></i></a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-            <div class="footer-widget">
-              <div class="footer-social-icon">
-                <span>Follow us</span>
-                <a href="#"><i class="fab fa-facebook-f social-icon"></i></a>
-                <a href="#"><i class="fab fa-twitter social-icon"></i></a>
-                <a href=""><i class="fab fa-instagram social-icon"></i></a>
-                <a href=""><i class="fab fa-youtube social-icon"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
-            <div class="footer-widget">
-              <div class="single-cta mt-5">
-                <i class="far fa-envelope-open"></i>
-                <div class="cta-text">
-                  <h4>Mail us</h4>
-                  <span>meenaketanpadhy2002@gmail.com</span>
+              <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+                <div class="footer-widget">
+                  <div class="single-cta mt-5">
+                    <i class="far fa-envelope-open"></i>
+                    <div class="cta-text">
+                      <h4>Mail us</h4>
+                      <span>meenaketanpadhy2002@gmail.com</span>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="copyright-area">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-6 col-lg-6 text-center text-lg-left">
-            <div class="copyright-text">
-              <p>
-                Copyright &copy; 2018, All Right Reserved
-                <a href="https://github.com/NishikantaRay">@Nishikanta</a>
-              </p>
-            </div>
-          </div>
-          <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
-            <div class="footer-menu">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Policy</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
+        <div class="copyright-area">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+                <div class="copyright-text">
+                  <p>
+                    Copyright &copy; 2022, All Right Reserved
+                    <a href="https://github.com/NishikantaRay">@Nishikanta</a>
+                  </p>
+                </div>
+              </div>
+              <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+                <div class="footer-menu">
+                  <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Policy</a></li>
+                    <li><a href="#">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </footer>
+      </footer>
   <!-- footer end -->
 <!-- Optional JavaScript; choose one of the two! -->
 <!-- Option 1: Bootstrap Bundle with Popper -->
