--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h3 class="logo text-light" style="text-transform: capitalize;">rawsome_photography</h3>
               </div>
               <div class="footer-text">
-                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/sabya.png" width="250px" height="150px" alt="" srcset=""></a>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/sabya.webp" width="250px" height="150px" alt="" srcset=""></a>
                 
               </div>
             </div>
@@ -171,7 +171,8 @@
                 <i class="far fa-envelope-open"></i>
                 <div class="cta-text">
                   <h4>Mail us</h4>
-                  <span>meenaketanpadhy2002@gmail.com</span>
+                  <span>meenaketanpadhy2002@gmail.com</span><br>
+                  <span><a href="#" style="text-decoration: none;">linktree</a></span>
                 </div>
               </div>
             </div>
