update text family

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Rufina&display=swap" rel="stylesheet" />
-  <title>THE_NOOBE_SHOW</title>
+  <title>THE NOOBE SHOW || MEENAKETAN PADHY || Graphic Designer </title>
 </head>
 
 <body>
@@ -27,20 +27,17 @@
     <header class="header">
       <!-- Navbar start -->
       <nav class="navbar">
-        <a class="brand" href="#">
-          <!-- img for navbar brand -->
-          <!-- <img src="" alt="" srcset="" /> -->
-          THE NOOBE SHOW
+        <a class="brand font_style"  href="index.html">
+           <span style="color: rgb(243, 181, 10);">THE</span> NOOBE  <span style="color: rgb(243, 181, 10);">SHOW</span>
         </a>
         <input type="checkbox" id="nav" class="hidden" />
         <label for="nav" class="nav-toggle">
           <span></span><span></span><span></span>
         </label>
-        <div class="wrapper">
+        <div class="wrapper font_style">
           <ul class="menu text-center">
             <li class="menu-item text-center"><a href="#home">HOME</a></li>
             <li class="menu-item text-center"><a href="#aboutme">ABOUT ME</a></li>
-            <!-- <li class="menu-item text-center"><a href="#">CREATION</a></li> -->
             <li class="menu-item text-center"><a href="#challenge">CHALLENGES</a></li>
             <li class="menu-item text-center"><a href="#">DOWNLOADS</a></li>
           </ul>
@@ -50,59 +47,32 @@
     </header>
     <!-- header end -->
     <!-- paralax 1 start -->
-    <div class="hero-content container-fluid" id="home">
+    <div class="hero-content container-fluid " id="home">
       <div class="pb-4 mt-5">
-        <h3 class="hero-header">CREATIONS</h3>
+        <h3 class="hero-header font_style" style="font-weight: 800;">CREATIONS</h3>
       </div>
-      <p class="hero-sub">
+      <p class="hero-sub font_style" style="line-height: 1.5;font-family: 'Roboto'; ">
         Who the hack am I , what are my goal in life and why do i make the stuff I make.
       </p>
-      <button class="btn-round-solid">
+      <button class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
         <ion-icon name="play"></ion-icon> Watch
-      </button>
-      <button class="btn-round-clear">
-        <ion-icon name="add"></ion-icon> Add to Library
       </button>
     </div>
     <!--  paralax1 end -->
   </div>
   <!-- paraalx 2 -->
-  <!-- <div class="paralx-div dis">
-    <div class="container h-100">
-      <div class="row align-items-center h-100">
-        <div class="container rounded">
-          <div class="slider">
-            <div class="logos" style="color: aliceblue">
-              <i class="fab fa-js fa-4x"></i>
-              <i class="fab fa-linkedin-in fa-4x"></i>
-              <i class="fab fa-dribbble fa-4x"></i>
-              <i class="fab fa-medium-m fa-4x"></i>
-              <i class="fab fa-github fa-4x"></i>
-            </div>
-
-            <div class="logos" style="color: aliceblue">
-              <i class="fab fa-js fa-4x" style="padding-left: 60px"></i>
-              <i class="fab fa-linkedin-in fa-4x" style="padding-left: 60px"></i>
-              <i class="fab fa-dribbble fa-4x" style="padding-left: 60px"></i>
-              <i class="fab fa-medium-m fa-4x" style="padding-left: 60px"></i>
-              <i class="fab fa-github fa-4x" style="padding-left: 60px"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
+  
   <!-- paralax 3 end -->
   <!-- paralax 4 start -->
   <div class="paralx-div">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
-        <h3 class="hero-header">TOWARDS 3D</h3>
+        <h3 class="hero-header font_style">TOWARDS <span style="color: rgb(243, 181, 10);">3D </span></h3>
       </div>
-      <p class="hero-sub">
+      <p class="hero-sub font_style" style="line-height: 1.5;font-family: 'Roboto'; ">
         I have started to learn 3d in blender because of corridor crew and their crazy videos, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.
       </p>
-      <button class="btn-round-solid">
+      <button class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
     </div>
