--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p class="hero-sub font_style" style="line-height: 1.5;font-family: 'Roboto'; ">
         Who the hack am I , what are my goal in life and why do i make the stuff I make.
       </p>
-      <button class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
+      <button onclick="window.location.href='#'" class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
         <ion-icon name="play"></ion-icon> Watch
       </button>
     </div>
@@ -72,7 +72,7 @@
       <p class="hero-sub font_style" style="line-height: 1.5;font-family: 'Roboto'; ">
         I have started to learn 3d in blender because of corridor crew and their crazy videos, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.
       </p>
-      <button class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
+      <button onclick="window.location.href='#'" class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
     </div>
@@ -82,12 +82,12 @@
   <div class="paralx-div" id="challenge">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
-        <h3 class="hero-header">CHALLENGES</h3>
+        <h3 class="hero-header font_style">CHALLENGES</h3>
       </div>
-      <p class="hero-sub">
-        I present to you my "HALL OF ART". This is the place where i flaunt all of my creations. I have started to participate in a lot of contests. I will keep creating more epic art and will keep updating this section.
+      <p class="hero-sub" style="line-height: 1.5;font-family: 'Roboto'; ">
+        I present to you my <span style="color: rgb(243, 181, 10);">"HALL OF ART" </span> . This is the place where i flaunt all of my creations. I have started to participate in a lot of contests. I will keep creating more epic art and will keep updating this section.
       </p>
-      <button class="btn-round-solid">
+      <button onclick="window.location.href='#'" class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
     </div>
@@ -96,12 +96,12 @@
   <div class="paralx-div pb-3" id="aboutme">
     <div class="hero-content2 container-fluid pt-5">
       <div class="pb-4 mt-5">
-        <h3 class="hero-header">ABOUT ME</h3>
+        <h3 class="hero-header font_style">ABOUT <span style="color: rgb(243, 181, 10);">ME </span></h3>
       </div>
-      <p class="hero-sub">
+      <p class="hero-sub" style="line-height: 1.5;font-family: 'Roboto'; ">
         I am a Graphic Designer and Engineer who try to make cool stuff in digital world. I do things like photo editing, manipulation , 3d enviroment , video editing like montages .
       </p>
-      <button class="btn-round-solid " onclick="window.location.href='pages/aboutme.html'">
+      <button class="btn-round-solid " style="background-color: rgb(243, 181, 10);" onclick="window.location.href='pages/aboutme.html'">
         <ion-icon name="play"></ion-icon> Click here
       </button>
     </div>
@@ -116,7 +116,8 @@
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-widget">
               <div class="footer-logo">
-                <h3 class="logo text-light" style="text-transform: capitalize;">rawsome_photography</h3>
+                <h3 class="logo text-light font_style" style="text-transform: capitalize;"> <span style="font-size: 15px; ">PARTNERSHIP WITH</span>  <br><span style="color: rgb(243, 181, 10);">RAWSOME PHOTOGRAPHY</span> </h3>
+                
               </div>
               <div class="footer-text">
                 <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/sabya.webp" width="250px" height="150px" alt="" srcset=""></a>
@@ -127,7 +128,7 @@
           <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
             <div class="footer-widget">
               <div class="footer-social-icon">
-                <span>Follow us</span>
+                <span >FOLLOW US</span>
                 <a href="https://www.facebook.com/meenaketanpadhy2002"><i class="fab fa-facebook-f social-icon"></i></a>
                 <a href="https://twitter.com/MeenaketanPadhy"><i class="fab fa-twitter social-icon"></i></a>
                 <a href="https://instagram.com/the_noobe_show_?utm_medium=copy_link"><i class="fab fa-instagram social-icon"></i></a>
@@ -138,11 +139,11 @@
           <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
             <div class="footer-widget">
               <div class="single-cta mt-5">
-                <i class="far fa-envelope-open"></i>
+                <i style="color: rgb(243, 181, 10);" class="far fa-envelope-open"></i>
                 <div class="cta-text">
-                  <h4>Mail us</h4>
+                  <h4>MAIL US</h4>
                   <span>meenaketanpadhy2002@gmail.com</span><br>
-                  <span><a href="#" style="text-decoration: none;">linktree</a></span>
+                  <span><a href="#" style="text-decoration: none; color:rgb(243, 181, 10) ;">linktr.ee/NOOBESHOW</a></span>
                 </div>
               </div>
             </div>
@@ -157,7 +158,7 @@
             <div class="copyright-text">
               <p>
                 Copyright &copy; 2022, All Right Reserved
-                <a href="https://github.com/NishikantaRay">@Nishikanta</a>
+                <a href="https://github.com/NishikantaRay" style="color: rgb(243, 181, 10);">@Nishikanta</a>
               </p>
             </div>
           </div>
