--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
- 
+  <div id="preloader">
+    <div id="status">&nbsp;</div>
+  </div>
   <div class="paralx-div" id="parallax">
     <!-- header start -->
     <header class="header">
