--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
   <title>THE NOOBE SHOW || MEENAKETAN PADHY || Graphic Designer </title>
 </head>
 
-<body>
-  <div id="preloader">
-    <div id="status">&nbsp;</div>
-  </div>
+<body >
+  <div class="splash text-center" id="splash">
+    <img src="img/LOGO1.png" id="imgid"  alt="" srcset="">
+    <!-- <h1>LIAM DOCHERTY'S PORTFOLIO IS</h1>
+    <span></span>
+    <span></span>
+    <span></span>
+    <br>
+    <h1>LOADING</h1> -->
+</div>
+<div id="app">
   <div class="paralx-div" id="parallax">
     <!-- header start -->
     <header class="header">
@@ -179,6 +186,8 @@
       </div>
     </div>
   </footer>
+</div>
+  
   <!-- footer end -->
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
