--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <!-- Required meta tags -->
-  <link rel="icon" href="./img/favicon.ico" type="image/icon type">
+  <link rel="shortcut icon" href="img/logoweb2.png" type="image/x-icon">
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Bootstrap CSS -->
