--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="My name is Meenaketan Padhy and I am 20 years old. I live in Odisha,India and I am a self taught Graphic designer . Before this , I have always been creating , but not photo editing. I have sound knowledge about Video editing, and am eagerly intrested in vfx which is my childhood dream.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Global site tag (gtag.js) - Floodlight -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=DC-ZZZZZZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+		gtag('config', 'UA-199542354-1');
+</script>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
