--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
 <!-- Required meta tags -->
+<!-- Required meta tags -->
+<link rel="shortcut icon" href="../img/logoweb2.png" type="image/x-icon">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="My name is Meenaketan Padhy and I am 20 years old. I live in Odisha,India and I am a self taught Graphic designer . Before this , I have always been creating , but not photo editing. I have sound knowledge about Video editing, and am eagerly intrested in vfx which is my childhood dream.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Global site tag (gtag.js) - Floodlight -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=DC-ZZZZZZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+		gtag('config', 'UA-199542354-1');
+</script>
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -16,10 +28,7 @@
 </head>
 <body>
     
-        <!-- START PRELOADER -->
-        <div id="preloader">
-            <div id="status">&nbsp;</div>
-        </div>
+        
         <div class="paralx-div2" id="parallax" style="height: 220px;">
             <!-- header start -->
             <header class="header">
