--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <!-- Required meta tags -->
   <link rel="shortcut icon" href="img/logoweb2.png" type="image/x-icon">
-
+  <meta property="og:image"
+  content="img/seo.webp" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="My name is Meenaketan Padhy and I am 20 years old. I live in Odisha,India and I am a self taught Graphic designer . Before this , I have always been creating , but not photo editing. I have sound knowledge about Video editing, and am eagerly intrested in vfx which is my childhood dream.">
@@ -107,7 +108,7 @@
       <p class="hero-sub" style="line-height: 1.5;font-family: 'Roboto'; ">
         I present to you my <span style="color: rgb(243, 181, 10);">"HALL OF ART" </span> . This is the place where i flaunt all of my creations. I have started to participate in a lot of contests. I will keep creating more epic art and will keep updating this section.
       </p>
-      <button onclick="window.location.href='#'" class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
+      <button onclick="window.location.href='pages/challenges.html'" class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
         <ion-icon name="play"></ion-icon> Play Now
       </button>
     </div>
