--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h3 class="hero-header font_style">TOWARDS <span style="color: rgb(243, 181, 10);">3D </span></h3>
       </div>
       <p class="hero-sub font_style" style="line-height: 1.5;font-family: 'Roboto'; ">
-        I have started to learn 3d in blender because of corridor crew and their crazy videos, But I did not know much about it. That's why I started to learning myself, just by it a LOT! I open a new Instagram account and started to post my work.
+        I have started to learn 3d in blender because of the corridor crew and their crazy videos, But I did not know much about it. That's why I started to train myself, just by it a LOT! I open a new Instagram account and started to post my work.
       </p>
       <button onclick="window.location.href='#'" class="btn-round-solid" style="background-color: rgb(243, 181, 10);">
         <ion-icon name="play"></ion-icon> Play Now
