--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -59,7 +59,7 @@
                 <h3 class="hero-header" style="font-size: 30px; font-family: sans-serif; font-weight: 800; padding-left: 10px;" >CHALLENGES </h3>
               </div>
               <p class="hero-sub" style="font-size: 15px; padding-left: 10px;">
-                Who the heck am I , what are my goal in life and why do i make the stuff I make.
+               I present to you my "HALL OF ART" . This is the place where i flaunt all of my creations. I have started to participate in a lot of contests. 
               </p>
             </div>
             </div>
@@ -71,7 +71,7 @@
             <h3 class="hero-header text-center" style="font-size: 30px; font-family: sans-serif; font-weight: 800; padding-left: 10px;" >  <span style="color: rgb(243, 181, 10);">MARCH</span>  CHALLENGE </h3>
           </div>
           <div class="text-center">
-            <img src="../img/img5.webp" width="80%" height="400px" alt="" srcset="">
+            <img id="imgids" src="../img/img5.webp"  alt="" srcset="">
           </div>
             
             <div class="text-center">
